20240505 Magic Android: 1.添加蓝牙通信功能； 2.实现基本通信； ESP32： 1.实现蓝牙通信功能； 2.实现基本通信；

--- a/station/.vscode/settings.json
+++ b/station/.vscode/settings.json
@@ -32,6 +32,8 @@
     "tusb.h": "c",
     "drv_hid.h": "c",
     "drv_adc.h": "c",
-    "task_servo.h": "c"
+    "task_servo.h": "c",
+    "stdlib.h": "c",
+    "inttypes.h": "c"
   }
 }
