--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -6,6 +6,8 @@ idf_component_register(SRCS "main.c"
                             "../app_task/task_rtc/task_rtc.c"
                             "../app_task/task_battery/task_battery.c"
                             "../drivers/drv_usb/drv_hid.c"
+                            "../drivers/drv_ble/drv_ble.c"
+                            "../app_task/task_bluetooth/task_bluetooth.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
@@ -13,4 +15,6 @@ idf_component_register(SRCS "main.c"
                                 "../app_task"
                                 "../app_task/task_servo"
                                 "../app_task/task_battery"
-                                "../app_task/task_rtc")
+                                "../app_task/task_rtc"
+                                "../drivers/drv_ble"
+                                "../app_task/task_bluetooth")
