--- a/Software/Android/app/src/main/AndroidManifest.xml
+++ b/Software/Android/app/src/main/AndroidManifest.xml
@@ -2,12 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.itcast.mqttclient">
 
-    <uses-permission android:name="android.permission.BLUETOOTH_ADVERTISE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
@@ -15,16 +12,24 @@
         android:allowBackup="true"
         android:icon="@mipmap/cycle"
         android:label="Sparrow"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/cycle"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MQTTClient"
-        android:networkSecurityConfig="@xml/network_security_config">
-        <activity android:name=".History"></activity>
-        <activity android:name=".ApplyJson"></activity>
-        <activity android:name=".SettingsActivity"></activity>
+        android:theme="@style/Theme.MQTTClient">
+        <activity
+            android:name=".MouseActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity android:name=".ToolsActivity" />
+        <activity android:name=".ApplyJson" />
+        <activity android:name=".SettingsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
