20240520 Android: 1.添加软键盘按键输入功能； 2.添加软键盘删除按键功能； ESP32： 1.实现按键输入； 2.实现删除功能；

--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -7,7 +7,9 @@ idf_component_register(SRCS "main.c"
                             "../app_task/task_battery/task_battery.c"
                             "../drivers/drv_usb/drv_hid.c"
                             "../drivers/drv_ble/drv_ble.c"
+                            "../drivers/drv_led/drv_led.c"
                             "../app_task/task_bluetooth/task_bluetooth.c"
+                            "../app_task/task_led/task_led.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
@@ -17,4 +19,6 @@ idf_component_register(SRCS "main.c"
                                 "../app_task/task_battery"
                                 "../app_task/task_rtc"
                                 "../drivers/drv_ble"
-                                "../app_task/task_bluetooth")
+                                "../drivers/drv_led"
+                                "../app_task/task_bluetooth"
+                                "../app_task/task_led")
