--- a/station/.vscode/settings.json
+++ b/station/.vscode/settings.json
@@ -5,7 +5,7 @@
     "board/esp32s3-builtin.cfg"
   ],
   "idf.flashType": "UART",
-  "idf.portWin": "COM21",
+  "idf.portWin": "COM18",
   "files.associations": {
     "mqtt_client.h": "c",
     "wifi.h": "c",
@@ -34,6 +34,8 @@
     "drv_adc.h": "c",
     "task_servo.h": "c",
     "stdlib.h": "c",
-    "inttypes.h": "c"
+    "inttypes.h": "c",
+    "array": "c",
+    "string": "c"
   }
 }
