--- a/station/app_task/task_bluetooth/CMakeLists.txt
+++ b/station/app_task/task_bluetooth/CMakeLists.txt
@@ -2,4 +2,5 @@ idf_component_register(SRCS "task_bluetooth.c"
                             "../../drivers/drv_ble/drv_ble.c"
                         INCLUDE_DIRS "."
                                      "../../drivers/drv_ble"
-                        REQUIRES   esp_event driver bt)
+                                     "../../drivers/drv_usb"
+                        REQUIRES   esp_event driver bt espressif__esp_tinyusb)
