--- a/Software/Android/app/src/main/AndroidManifest.xml
+++ b/Software/Android/app/src/main/AndroidManifest.xml
@@ -17,6 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MQTTClient">
         <activity
+            android:name=".KeyboardActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".MouseActivity"
             android:exported="false">
             <meta-data
