20240528 Android:添加esptouch配网功能

--- a/Software/Android/app/src/main/AndroidManifest.xml
+++ b/Software/Android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,10 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.RECEIVE_USER_PRESENT" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
 
     <application
         android:allowBackup="true"
@@ -16,6 +20,13 @@
         android:roundIcon="@mipmap/cycle"
         android:supportsRtl="true"
         android:theme="@style/Theme.MQTTClient">
+        <activity
+            android:name=".settingsActivity.SmartCfgActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
         <activity
             android:name=".KeyboardActivity"
             android:exported="false">
