--- a/station/app_task/task_bluetooth/CMakeLists.txt
+++ b/station/app_task/task_bluetooth/CMakeLists.txt
@@ -3,4 +3,5 @@ idf_component_register(SRCS "task_bluetooth.c"
                         INCLUDE_DIRS "."
                                      "../../drivers/drv_ble"
                                      "../../drivers/drv_usb"
+                                     "../../drivers/drv_led"
                         REQUIRES   esp_event driver bt espressif__esp_tinyusb)
