20240604 Android: 1.修改BLE mtu为500; 2.添加服务器配置协议; ESP32: 1.添加服务器配置协议;

--- a/Software/Android/app/src/main/AndroidManifest.xml
+++ b/Software/Android/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MQTTClient">
         <activity
+            android:name=".settingsActivity.ServerCfgActivity"
+            android:exported="false">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".settingsActivity.SmartCfgActivity"
             android:exported="false">
             <meta-data
