--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -1,4 +1,5 @@
 idf_component_register(SRCS "main.c"
+                            "systemInfo.c"
                             "../drivers/wifi/wifi_station.c"
                             "../drivers/drv_mqtt/driver_mqtt.c"
                             "../drivers/drv_adc/drv_adc.c"
@@ -10,10 +11,12 @@ idf_component_register(SRCS "main.c"
                             "../drivers/drv_led/drv_led.c"
                             "../app_task/task_bluetooth/task_bluetooth.c"
                             "../app_task/task_led/task_led.c"
+                            "../drivers/drv_nvs/drv_nvs.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
                                 "../drivers/drv_usb"
+                                "../drivers/drv_nvs"
                                 "../app_task"
                                 "../app_task/task_servo"
                                 "../app_task/task_battery"
@@ -21,4 +24,5 @@ idf_component_register(SRCS "main.c"
                                 "../drivers/drv_ble"
                                 "../drivers/drv_led"
                                 "../app_task/task_bluetooth"
-                                "../app_task/task_led")
+                                "../app_task/task_led"
+                                )
