--- a/station/app_task/task_bluetooth/CMakeLists.txt
+++ b/station/app_task/task_bluetooth/CMakeLists.txt
@@ -4,4 +4,5 @@ idf_component_register(SRCS "task_bluetooth.c"
                                      "../../drivers/drv_ble"
                                      "../../drivers/drv_usb"
                                      "../../drivers/drv_led"
-                        REQUIRES   esp_event driver bt espressif__esp_tinyusb)
+                                     "../../drivers/drv_nvs"
+                        REQUIRES   esp_event driver bt espressif__esp_tinyusb nvs_flash)
