--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -12,11 +12,13 @@ idf_component_register(SRCS "startup.c" "main.c"
                             "../app_task/task_bluetooth/task_bluetooth.c"
                             "../app_task/task_led/task_led.c"
                             "../drivers/drv_nvs/drv_nvs.c"
+                            "../drivers/drv_json/drv_jsonHandler.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
                                 "../drivers/drv_usb"
                                 "../drivers/drv_nvs"
+                                "../drivers/drv_json"
                                 "../app_task"
                                 "../app_task/task_servo"
                                 "../app_task/task_battery"
@@ -25,4 +27,5 @@ idf_component_register(SRCS "startup.c" "main.c"
                                 "../drivers/drv_led"
                                 "../app_task/task_bluetooth"
                                 "../app_task/task_led"
+                                
                                 )
