--- a/station/drivers/drv_mqtt/CMakeLists.txt
+++ b/station/drivers/drv_mqtt/CMakeLists.txt
@@ -2,4 +2,4 @@ idf_component_register(SRCS "driver_mqtt.c"
                         INCLUDE_DIRS "."
                                     "../../app_task/task_servo"
                                     "../../main"
-                        REQUIRES esp-tls esp_wifi esp_event mqtt nvs_flash task_servo)
+                        REQUIRES json esp-tls esp_wifi esp_event mqtt nvs_flash task_servo)
