--- a/station/app_task/task_led/CMakeLists.txt
+++ b/station/app_task/task_led/CMakeLists.txt
@@ -1,4 +1,5 @@
 idf_component_register(SRCS "task_led.c"
                         INCLUDE_DIRS "."
                                     "../../drivers/drv_led"
-                        REQUIRES driver hal)
+                                    "../../drivers/drv_usb"
+                        REQUIRES driver hal espressif__esp_tinyusb)
