--- a/Software/build-Sparrow-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/Makefile
+++ b/Software/build-Sparrow-Desktop_Qt_5_12_12_MinGW_32_bit-Debug/Makefile
@@ -209,6 +209,7 @@ Makefile: ../Windows/Sparrow.pro C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/win3
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/qt_config.prf \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/win32-g++/qmake.conf \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/spec_post.prf \
+		.qmake.stash \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/exclusive_builds.prf \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/toolchain.prf \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/default_pre.prf \
@@ -238,6 +239,7 @@ Makefile: ../Windows/Sparrow.pro C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/win3
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Widgets.prl \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Gui.prl \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Network.prl \
+		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5SerialPort.prl \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Concurrent.prl \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Core.prl \
 		C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/qtmain.prl
@@ -388,6 +390,7 @@ C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/qt_functions.prf:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/qt_config.prf:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/win32-g++/qmake.conf:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/spec_post.prf:
+.qmake.stash:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/exclusive_builds.prf:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/toolchain.prf:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/mkspecs/features/default_pre.prf:
@@ -417,6 +420,7 @@ C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5WinExtras.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Widgets.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Gui.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Network.prl:
+C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5SerialPort.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Concurrent.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/Qt5Core.prl:
 C:/Qt/Qt5.12.12/5.12.12/mingw73_32/lib/qtmain.prl:
