--- a/station/drivers/drv_usb/CMakeLists.txt
+++ b/station/drivers/drv_usb/CMakeLists.txt
@@ -1,3 +1,3 @@
-idf_component_register(SRCS "drv_hid.c"
+idf_component_register(SRCS "drv_usb.c"
                         INCLUDE_DIRS ".""../managed_components"
                         REQUIRES driver espressif__esp_tinyusb espressif_tinyusb)
