--- a/station/app_task/task_display/CMakeLists.txt
+++ b/station/app_task/task_display/CMakeLists.txt
@@ -15,4 +15,5 @@ idf_component_register(SRCS "task_display.c"
                                      ".""../../managed_components"
                                      "../../drivers/drv_lcd"
                                      "../../src/ui"
+                                     "../../src/components"
                         REQUIRES   esp_event driver nvs_flash lvgl__lvgl esp_lcd esp_timer espressif__esp_lcd_ili9341 hal)
