--- a/station/src/ui/CMakelists.txt
+++ b/station/src/ui/CMakelists.txt
@@ -1,9 +1,11 @@
-idf_component_register(SRCS "ui_startPage.c"
+idf_component_register(SRCS "ui_Screen4.c" "ui_startPage.c"
                             "deviceBinding.c"
+                            "lv_font_source_han_sans_normal_30.c"
                             "ui.c"
                             "ui_Screen1.c"
                             "ui_Screen2.c"
                             "ui_Screen3.c"
+                            "lv_port_indev.c"
                             "../../drivers/drv_button/drv_button.c"
                         INCLUDE_DIRS "."
                                      ".""../../managed_components"
