--- a/station/.vscode/settings.json
+++ b/station/.vscode/settings.json
@@ -5,7 +5,7 @@
     "board/esp32s3-builtin.cfg"
   ],
   "idf.flashType": "UART",
-  "idf.portWin": "COM10",
+  "idf.portWin": "COM12",
   "files.associations": {
     "mqtt_client.h": "c",
     "wifi.h": "c",
@@ -74,6 +74,7 @@
     "lv_port_indev.h": "c",
     "ui.h": "c",
     "drv_led.h": "c",
-    "thread": "c"
+    "thread": "c",
+    "list": "c"
   }
 }
