--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -15,6 +15,8 @@ idf_component_register(SRCS "startup.c" "main.c"
                             "../drivers/drv_nvs/drv_nvs.c"
                             "../drivers/drv_json/drv_jsonHandler.c"
                             "../app_task/task_display/task_display.c"
+                            "../drivers/drv_http/drv_http.c"
+                            "../app_task/task_http/task_http.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
@@ -31,4 +33,6 @@ idf_component_register(SRCS "startup.c" "main.c"
                                 "../app_task/task_bluetooth"
                                 "../app_task/task_led"
                                 "../app_task/task_display"
+                                "../drivers/drv_http"
+                                "../app_task/task_http"
                                 )
