--- a/Software/Android/build.gradle
+++ b/Software/Android/build.gradle
@@ -5,7 +5,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.3.1'
+        classpath 'com.android.tools.build:gradle:7.4.2'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,6 +15,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        maven{ url ‘http://maven.aliyun.com/nexus/content/groups/public/’}
         jcenter()
         maven { url 'https://jitpack.io' }
     }
