--- a/Project/Android/app/build.gradle
+++ b/Project/Android/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation libs.lifecycle.viewmodel.ktx
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
+    implementation files('libs\\org.eclipse.paho.client.mqttv3.jar')
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
