--- a/station/src/ui/CMakelists.txt
+++ b/station/src/ui/CMakelists.txt
@@ -1,4 +1,4 @@
-idf_component_register(SRCS "ui_settingPage.c" "ui_Screen4.c" "ui_startPage.c"
+idf_component_register(SRCS "ui_tomatoClockPage.c" "ui_settingPage.c" "ui_Screen4.c" "ui_startPage.c"
                             "deviceBinding.c"
                             "lv_font_source_han_sans_normal_30.c"
                             "ui.c"
