--- a/station/.vscode/settings.json
+++ b/station/.vscode/settings.json
@@ -5,7 +5,7 @@
     "board/esp32s3-builtin.cfg"
   ],
   "idf.flashType": "UART",
-  "idf.portWin": "COM15",
+  "idf.portWin": "COM23",
   "files.associations": {
     "mqtt_client.h": "c",
     "wifi.h": "c",
@@ -82,6 +82,8 @@
     "tuple": "c",
     "utility": "c",
     "sys.h": "c",
-    "task_bluetooth.h": "c"
+    "task_bluetooth.h": "c",
+    "numbers": "c",
+    "random": "c"
   }
 }
