--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -18,6 +18,7 @@ idf_component_register(SRCS "startup.c" "main.c"
                             "../drivers/drv_http/drv_http.c"
                             "../app_task/task_http/task_http.c"
                             "../app_task/task_usb/task_usb.c"
+                            "../app_task/task_mqtt/task_mqtt.c"
                             "../drivers/drv_power/drv_power.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
@@ -39,4 +40,5 @@ idf_component_register(SRCS "startup.c" "main.c"
                                 "../app_task/task_http"
                                 "../app_task/task_usb"
                                 "../drivers/drv_power"
+                                "../app_task/task_mqtt"
                                 )
