--- a/station/drivers/drv_json/CMakeLists.txt
+++ b/station/drivers/drv_json/CMakeLists.txt
@@ -1,2 +1,2 @@
 idf_component_register(SRCS "drv_jsonHandler.c"
-                        REQUIRES json driver hal)
+                        REQUIRES json driver hal nvs_flash)
