--- a/station/main/CMakeLists.txt
+++ b/station/main/CMakeLists.txt
@@ -20,6 +20,7 @@ idf_component_register(SRCS "startup.c" "main.c"
                             "../app_task/task_usb/task_usb.c"
                             "../app_task/task_mqtt/task_mqtt.c"
                             "../drivers/drv_power/drv_power.c"
+                            "../drivers/drv_servo/drv_servo.c"
                     INCLUDE_DIRS "."
                                 "../drivers/drv_mqtt"
                                 "../drivers/wifi"
@@ -41,4 +42,5 @@ idf_component_register(SRCS "startup.c" "main.c"
                                 "../app_task/task_usb"
                                 "../drivers/drv_power"
                                 "../app_task/task_mqtt"
+                                "../drivers/drv_servo"
                                 )
