--- a/station/src/CMakelists.txt
+++ b/station/src/CMakelists.txt
@@ -2,17 +2,18 @@ idf_component_register( SRCS
                         "ui/ui.c"
                         "ui/deviceBinding.c"
                         "ui/lv_port_indev.c"
-                        "ui/ui_Screen1.c"
-                        "ui/ui_Screen2.c"
-                        "ui/ui_Screen3.c"
-                        "ui/ui_Screen4.c"
-                        "ui/ui_settingPage.c"
+                        "ui/ui_Screen_Loading.c"
+                        "ui/ui_Screen_Main.c"
+                        "ui/ui_Screen_Menu.c"
+                        "ui/ui_Screen_System.c"
+                        "ui/ui_Screen_Setting.c"
                         "ui/ui_helpers.c"
-                        "ui/ui_startPage.c"
-                        "ui/ui_tomatoClockPage.c"
-                        "imgs/ui_img_919562436.c"
+                        "ui/ui_Screen_TomatoClock.c"
+                        "ui/ui_Screen_Background.c"
+                        "imgs/ui_img_sparrow.c"
                         "ui/lv_font_source_han_sans_normal_30.c"
                         "../drivers/drv_button/drv_button.c"
+                        "../drivers/drv_nvs/drv_nvs.c"
                         "components/ui_comp.c"
                         "imgs/ui_img_memory_png.c"
                         "imgs/ui_img_cpu_png.c"
@@ -68,5 +69,5 @@ idf_component_register( SRCS
                         "imgs"
                         "components"
                         "../drivers"
-                        REQUIRES driver
+                        REQUIRES driver nvs_flash
 )
