--- a/Project/Android/app/src/main/AndroidManifest.xml
+++ b/Project/Android/app/src/main/AndroidManifest.xml
@@ -56,6 +56,7 @@
         <activity android:name=".settings.SmartCfgActivity"/>
         <activity android:name=".tools.UploadFileActivity"/>
         <activity android:name=".tools.UploadTextActivity"/>
+        <activity android:name=".tools.NotificationActivity"/>
     </application>
 
 </manifest>
