--- a/Project/Android/app/src/main/AndroidManifest.xml
+++ b/Project/Android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
     <uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
@@ -25,14 +25,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Sparrow"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".settings.BleNameSetActivity"
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Sparrow" >
+            android:theme="@style/Theme.Sparrow">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -50,13 +54,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-        <activity android:name=".ToolsActivity"/>
-        <activity android:name=".SettingsActivity"/>
-        <activity android:name=".settings.ServerCfgActivity"/>
-        <activity android:name=".settings.SmartCfgActivity"/>
-        <activity android:name=".tools.UploadFileActivity"/>
-        <activity android:name=".tools.UploadTextActivity"/>
-        <activity android:name=".tools.NotificationActivity"/>
+        <activity android:name=".ToolsActivity" />
+        <activity android:name=".SettingsActivity" />
+        <activity android:name=".settings.ServerCfgActivity" />
+        <activity android:name=".settings.SmartCfgActivity" />
+        <activity android:name=".tools.UploadFileActivity" />
+        <activity android:name=".tools.UploadTextActivity" />
+        <activity android:name=".tools.NotificationActivity" />
     </application>
 
 </manifest>
